[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = ""
authors = ["frmccann97 <frmccann97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jax = "^0.4.30"
flax = "^0.8.5"
mujoco-py = "^2.1.2.14"
gym = {extras = ["mujoco", "robotics"], version = "^0.26.2"}
optax = "^0.2.3"
numpy = "^2.0.0"
gymnasium = "^0.29.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
